--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/QA?useUnicode=true&characterEn
 spring.datasource.username=root
 spring.datasource.password=8
 mybatis.config-location=classpath:mybatis-config.xml
+
+spring.application.name=QAsystem
 #spring.velocity.toolbox-config-location=toolbox.xml
 
 
@@ -28,4 +30,4 @@ spring.freemarker.settings.classic_compatible=true
 spring.freemarker.settings.date_format=yyyy-MM-dd
 spring.freemarker.settings.time_format=HH:mm:ss
 spring.freemarker.settings.datetime_format=yyyy-MM-dd HH:mm:ss
-spring.freemarker.order=1
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/static/,classpath:/static/,classpath:/public
