update the async construction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,14 @@ mybatis.config-location=classpath:mybatis-config.xml
 spring.application.name=QAsystem
 #spring.velocity.toolbox-config-location=toolbox.xml
 
+spring.mail.default-encoding=UTF-8
+spring.mail.host=
+spring.mail.password=
+spring.mail.port=
+spring.mail.protocol=
+spring.mail.username=
+
+
 
 spring.freemarker.allow-request-override=false
 spring.freemarker.allow-session-override=false
