--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.13</version>
+			<version>1.2.31</version>
 		</dependency>
 
 		<dependency>
@@ -79,6 +79,12 @@
             <artifactId>jedis</artifactId>
             <version>2.8.0</version>
         </dependency>
+
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
     </dependencies>
 
 	<build>
