add some data and change the version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,13 @@ spring.application.name=QAsystem
 #spring.velocity.toolbox-config-location=toolbox.xml
 
 spring.mail.default-encoding=UTF-8
-spring.mail.host=
-spring.mail.password=
-spring.mail.port=
-spring.mail.protocol=
-spring.mail.username=
+spring.mail.host=smtp.exmail.qq.com
+spring.mail.password=Qq6571828
+spring.mail.port=465
+spring.mail.protocol=smtps
+spring.mail.username=cyp@cyp.design
+
+
 
 
 
