add some data and change the version

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
 			<version>2.6</version>
 		</dependency>
 
+		<!-- pagehelper -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>5.1.0</version>
+		</dependency>
+
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
